header div div gap fix

--- a/styles.css
+++ b/styles.css
@@ -55,6 +55,8 @@ header div.section-wrapper {
 }
 
 header div div {
+    display: flex;
+    flex-direction: row;
     gap: 1em;
 }
 
